--- a/web/templates/constructor/constructor.html
+++ b/web/templates/constructor/constructor.html
@@ -21,16 +21,15 @@
                 <li class="users-columns__item users-columns__name">
                     <h3>Фильтр</h3>
                 </li>
-                <li class="users-columns__item users-columns__group">
-                    <h3>Участок</h3>
-                </li>
-                <li class="users-columns__item users-columns__disable">
-                    <h3>Отключен</h3>
-                </li>
+                {{/*                <li class="users-columns__item users-columns__group">*/}}
+                {{/*                    <h3>Позиция</h3>*/}}
+                {{/*                </li>*/}}
             </ul>
 
-            <ul class="users__list">
-            </ul>
+            <div class="wrapper__block">
+                <ul class="users__list">
+                </ul>
+            </div>
         </div>
 
     </div>
