--- a/web/templates/parts/admin-nav.html
+++ b/web/templates/parts/admin-nav.html
@@ -12,10 +12,6 @@
 
             <li class="panel-nav__item">
                 <a href="/groups/view" class="panel-nav__link">Группы</a>
-                <a href="/groups/add" class="panel-nav__link panel-nav__link--add">
-                    <span>+</span>
-                    Добавить
-                </a>
             </li>
 
             <li class="panel-nav__item">
@@ -33,6 +29,10 @@
                     <span>+</span>
                     Добавить
                 </a>
+            </li>
+
+            <li class="panel-nav__item">
+                <a href="/constructor/view" class="panel-nav__link">Конструктор фильтров</a>
             </li>
 
             <li class="panel-nav__item">
