--- a/web/templates/plots/plots-add.html
+++ b/web/templates/plots/plots-add.html
@@ -25,6 +25,12 @@
             </div>
 
             <div class="user-form__block">
+                <label class="user-form__label" for="short_name">Короткое имя</label>
+                <input id="short_name" class="user-form__input user-form__name" name="short_name" type="text"
+                       value="" required>
+            </div>
+
+            <div class="user-form__block">
                 <button class="user-form__submit" type="submit">Добавить</button>
             </div>
         </form>
