--- a/web/templates/users/users-add.html
+++ b/web/templates/users/users-add.html
@@ -33,6 +33,12 @@
             </div>
 
             <div class="user-form__block">
+                <label class="user-form__label" for="name">Никнейм</label>
+                <input id="name" class="user-form__input user-form__name" name="nickname" type="text"
+                       value="" required>
+            </div>
+
+            <div class="user-form__block">
                 <label class="user-form__label" for="group">Группа</label>
                 <select class="user-form__input user-form__group" name="group_id" id="group" required>
                 </select>
