--- a/web/templates/filters/filters-edit.html
+++ b/web/templates/filters/filters-edit.html
@@ -35,15 +35,20 @@
             </div>
 
             <div class="user-form__block">
+                <label class="user-form__label" for="disable">Скрыть</label>
+                <input id="disable" class=""{{if .Filter.Disable}} checked {{end}} name="disable" type="checkbox">
+            </div>
+
+            <div class="user-form__block">
                 <label class="user-form__label" for="plot">Начало работы</label>
                 <input id="plot" class="user-form__input user-form__login" name="start_time" type="text"
-                       value="{{.Filter.StartTime}}">
+                       value="{{.Filter.StartTime}}" placeholder="00:00">
             </div>
 
             <div class="user-form__block">
                 <label class="user-form__label" for="end-time">Конец работы</label>
                 <input id="end-time" class="user-form__input user-form__name" name="end_time" type="text"
-                       value="{{.Filter.EndTime}}">
+                       value="{{.Filter.EndTime}}" placeholder="00:00">
             </div>
 
             <div class="user-form__block">
