--- a/web/templates/users/users-edit.html
+++ b/web/templates/users/users-edit.html
@@ -33,6 +33,17 @@
             </div>
 
             <div class="user-form__block">
+                <label class="user-form__label" for="nickname">Никнейм</label>
+                <input id="nickname" class="user-form__input user-form__name" name="nickname" type="text"
+                       value="{{.User.Nickname}}">
+            </div>
+
+            <div class="user-form__block">
+                <label class="user-form__label" for="disable">Скрыть</label>
+                <input id="disable" class=""{{if .User.Disable}} checked {{end}} name="disable" type="checkbox">
+            </div>
+
+            <div class="user-form__block">
                 <label class="user-form__label" for="group">Группа</label>
                 <select class="user-form__input user-form__group" name="group_id" id="group">
                     <option value="{{.User.GroupID}}">{{.User.Group}}</option>
