--- a/web/templates/plots/plots.html
+++ b/web/templates/plots/plots.html
@@ -22,7 +22,7 @@
                     <h3>Участок</h3>
                 </li>
                 <li class="plots-columns__item plots-columns__description">
-                    <h3>Описание</h3>
+                    <h3>Никнейм</h3>
                 </li>
             </ul>
 
