--- a/web/templates/users/users.html
+++ b/web/templates/users/users.html
@@ -21,11 +21,17 @@
                 <li class="users-columns__item users-columns__name">
                     <h3>Имя</h3>
                 </li>
+                <li class="users-columns__item users-columns__nickname">
+                    <h3>Никнейм</h3>
+                </li>
                 <li class="users-columns__item users-columns__group">
                     <h3>Группа</h3>
                 </li>
                 <li class="users-columns__item users-columns__plots">
                     <h3>Участки</h3>
+                </li>
+                <li class="users-columns__item users-columns__plots">
+                    <h3>Скрыт</h3>
                 </li>
             </ul>
 
