--- a/web/templates/filters/filters.html
+++ b/web/templates/filters/filters.html
@@ -25,7 +25,7 @@
                     <h3>Участок</h3>
                 </li>
                 <li class="users-columns__item users-columns__disable">
-                    <h3>Отключен</h3>
+                    <h3>Скрыт</h3>
                 </li>
             </ul>
 
