--- a/web/templates/filters/filters-add.html
+++ b/web/templates/filters/filters-add.html
@@ -33,12 +33,12 @@
 
             <div class="user-form__block">
                 <label class="user-form__label" for="plot">Начало работы</label>
-                <input id="plot" class="user-form__input user-form__login" name="start_time" type="text" placeholder="00:00">
+                <input value="08:30" id="plot" class="user-form__input user-form__login" name="start_time" type="time" placeholder="00:00">
             </div>
 
             <div class="user-form__block">
                 <label class="user-form__label" for="end-time">Конец работы</label>
-                <input id="end-time" class="user-form__input user-form__name" name="end_time" type="text" placeholder="00:00">
+                <input value="19:30" id="end-time" class="user-form__input user-form__name" name="end_time" type="time" placeholder="00:00">
             </div>
 
             <div class="user-form__block">
